Add magical items in Gear

--- a/templates/actor/shadowrun6-Player-sheet.html
+++ b/templates/actor/shadowrun6-Player-sheet.html
@@ -72,6 +72,8 @@
 			{{> "systems/shadowrun6-eden/templates/parts/section-gear.html" geartype="CHEMICALS" title=(localize 'shadowrun6.section.chemicals')}}
 			{{> "systems/shadowrun6-eden/templates/parts/section-gear.html" geartype="BIOLOGY" title=(localize 'shadowrun6.section.biology')}}
 
+			{{> "systems/shadowrun6-eden/templates/parts/section-gear.html" geartype="MAGICAL" title=(localize 'shadowrun6.section.magical')}}
+
 			{{> "systems/shadowrun6-eden/templates/parts/section-gear.html" geartype="SURVIVAL" title=(localize 'shadowrun6.section.survival')}}
 			{{> "systems/shadowrun6-eden/templates/parts/section-gear.html" geartype="TOOLS" title=(localize 'shadowrun6.gear.subtype.TOOLS')}}
 			
