--- a/templates/item/shadowrun6-gear-sheet.html
+++ b/templates/item/shadowrun6-gear-sheet.html
@@ -1,4 +1,4 @@
-<form class="flexcol {{cssClass}}" autocomplete="off">
+<form class="flexcol {{cssClass}}" autocomplete="off" style="min-width: 605px;">
     {{!-- Sheet Body --}}
     <section class="sheet-body">
         <h2><input type="text" value="{{item.name}}" data-field="name" /></h2>
