Added Add button to the RCC section in the Vehicles tab of character sheet. (Issue #8)

--- a/templates/parts/section-matrixbase.html
+++ b/templates/parts/section-matrixbase.html
@@ -19,7 +19,7 @@
    </div>
    {{/if}}
    {{/if}}
-    <div class="centered" style="padding-bottom: 0.2rem;">
+    <div class="centered rubik-glitch-regular" style="padding: 0.5rem 0 0.2rem 0;">
 		{{ localize 'shadowrun6.section.matrix_base.overwatch' }}
 	</div>     
     <div class="edge" style="width: 80px; height:80px">
