--- a/templates/parts/section-riggingbase.html
+++ b/templates/parts/section-riggingbase.html
@@ -1,4 +1,8 @@
 <div class="section" style="display: inline-block; width:38%;">
+	<div class="section-head">
+     <h2 class="section-title">{{ localize 'shadowrun6.section.matrix_devices.title_rcc' }}</h2>
+	 <a class="item-control rcc-create" title="{{localize 'shadowrun6.section.matrix_devices.add_rcc' }}"><h2 class="fas fa-plus"></h2></a>
+	</div>
 	<table>
 		<tbody>
 			<tr>
@@ -15,9 +19,9 @@
 		<thead>
 			<tr>
 				<th style="padding: 0 5px 0 5px;">{{ localize 'shadowrun6.label.name' }}</th>
-				<th style="padding: 0 0px 0 5px; width: 1em">{{ localize 'shadowrun6.label.devicerating.short' }}</th>
-				<th style="padding: 0 0px 0 0px; width: 1em">{{ localize 'shadowrun6.label.dataproc.short' }}</th>
-				<th style="padding: 0 5px 0 0px; width: 1em">{{ localize 'shadowrun6.label.firewall.short' }}</th>
+				<th style="padding: 0 0px 0 5px; width: 2em">{{ localize 'shadowrun6.label.devicerating.short' }}</th>
+				<th style="padding: 0 0px 0 0px; width: 2em">{{ localize 'shadowrun6.label.dataproc.short' }}</th>
+				<th style="padding: 0 5px 0 0px; width: 2em">{{ localize 'shadowrun6.label.firewall.short' }}</th>
 				<th style="padding: 0 5px 0 5px; width: 3rem"> </th>
 			</tr>
 		</thead>
