Added optional rule for Hard Dice Cap (20) and edge coin in roll dialog now also updates when choosing an edge boost

--- a/templates/dialog/partRollDialogEdge.html
+++ b/templates/dialog/partRollDialogEdge.html
@@ -6,7 +6,7 @@
 				<div class="edge-roll" style="flex: 0.48; margin-right: 10px">
 					<img src="systems/shadowrun6-eden/images/EdgeToken.webp" style="border: 0px; height: auto; width: 48px; z-index: 0; position:absolute; filter: drop-shadow(0 0 4px #000000);" />
 					{{log "partRollDialogEdge.html" this }}
-					<label class="edge-value" >{{data.edge}}</label>
+					<label name="edgePool" class="edge-value" >{{data.edge}}</label>
 				</div>
 			</td>
 			<td style="width: 90px;">Boost</td>
