--- a/templates/actor/shadowrun6-Vehicle-sheet.html
+++ b/templates/actor/shadowrun6-Vehicle-sheet.html
@@ -1,4 +1,16 @@
 <form class="{{cssClass}}" autocomplete="off">
+	<header class="sheet-header">
+		<div>
+		<img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="120" width="120" /><br/><br/>
+	  </div>
+	  <div class="header-fields">
+		<h1><input data-field="name" type="text" value="{{actor.name}}" placeholder="{{localize 'shadowrun6.name' }}" /></h1>
+		
+		<div style="display:flex; flex-direction:row; align-items:center;">
+		{{> "systems/shadowrun6-eden/templates/parts/monitors.html" attributes=system.attributes}}
+		</div>
+	</div>
+	</header>
 	{{!-- Sheet Body --}}
    <section class="sheet-body">
 		<div style="display:flex; flex-wrap: wrap;">
@@ -6,25 +18,12 @@
          <div class="section">
          	<h2><input data-field="name" type="text" value="{{actor.name}}" placeholder="{{localize 'shadowrun6.name' }}" /></h2>
             {{> "systems/shadowrun6-eden/templates/parts/vehicle-stats.html"}}
-            {{> "systems/shadowrun6-eden/templates/parts/vehicle-monitor.html"}}
-
- 	<p>This sheet is far from finished, but since I don't when/if if will be able to continue working on this, it is committed like it is - at least you can enter vehicle stats. Everything below is under construction.</p>
-             {{> "systems/shadowrun6-eden/templates/parts/vehicle-speed.html"}}
-            {{> "systems/shadowrun6-eden/templates/parts/vehicle-accessories.html"}}
-            {{> "systems/shadowrun6-eden/templates/parts/vehicle-software.html"}}
+            {{> "systems/shadowrun6-eden/templates/parts/vehicle-speed.html"}}
          </div>
+		    {{> "systems/shadowrun6-eden/templates/parts/vehicle-weapons.html"}}
             {{> "systems/shadowrun6-eden/templates/parts/vehicle-piloting.html"}}
-            {{> "systems/shadowrun6-eden/templates/parts/vehicle-weapons.html"}}
-			<div style="margin: 5px">
-				<img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" width="360" height="240" /><br/><br/>
-			</div>
+			{{> "systems/shadowrun6-eden/templates/parts/section-autosoft.html"}}
 
 		</div>
-		<div style="display:flex; flex-wrap: wrap;">
-         <div>
-			   {{> "systems/shadowrun6-eden/templates/parts/vehicle-brain.html"}}
-			   {{> "systems/shadowrun6-eden/templates/parts/vehicle-weapons.html"}}
-			</div>
-			 </div>
     </section>
 </form>
