--- a/templates/parts/vehicle-speed.html
+++ b/templates/parts/vehicle-speed.html
@@ -1,15 +1,18 @@
-<p><b>ToDo:</b> Vehicle Speed Control</p>
-<label>Belongs To: </label> 
-<select class="vehicleUser" data-field="system.vehicle.belongs">
-	{{log this}}
-	{{selectOptions this.options.allVehicleUser selected=system.vehicle.belongs}}
-</select>
-<br/>
+<label>{{localize 'shadowrun6.label.type' }} </label>
+<select data-field="system.vtype">
+	{{selectOptions this.config.skill_special.piloting selected=system.vtype localize=true}}
+</select><br/>
 
-<label>Mode of Operation</label>
+<label>{{localize 'shadowrun6.label.belongs_to' }} </label>
+<select class="vehicleUser" data-field="system.vehicle.belongs">
+	{{selectOptions this.options.allVehicleUser selected=system.vehicle.belongs}}
+</select><br/>
+
+<label>{{localize 'shadowrun6.label.mode_of_operation'}}</label> 
 <select data-field="system.vehicle.opMode" data-field="system.vehicle.opMode" data-item-id="{{this.id}}">
-	{{selectOptions config.VEHICLE_MODE selected=system.vehicle.opMode localize=true}}
+{{selectOptions config.VEHICLE_MODE selected=system.vehicle.opMode localize=true}}
 </select>
+
 
 <table>
 	<tr>
@@ -23,11 +26,13 @@
 		{{localize 'shadowrun6.label.onroad'}}
 		{{/if}}</td>
 		<td><img src="systems/shadowrun6-eden/images/hills.svg" style="border: 0px; height: auto; width: 48px" /></td>
-		<td style="width: 4em"/>
+		<td style="width: 4em"></td>
 		<td><img src="systems/shadowrun6-eden/images/speedometer.svg" style="border: 0px; height: auto; width: 64px" /></td>
 		<td> <button type="button" class="vehicle-slower">{{localize 'shadowrun6.label.slower'}}</button> </td>
-		<td><input class="centered box" type="text" style="width: 4em"  value="{{system.vehicle.speed}}" data-dtype="Number"
-				data-field="system.vehicle.speed" /></td>
+		<td><input class="centered box" type="text" style="width: 4em"  value="{{system.vehicle.speed}}" data-dtype="Number" data-field="system.vehicle.speed" /></td>
 		<td> <button type="button" class="vehicle-faster">{{localize 'shadowrun6.label.faster'}}</button> </td>
 	</tr>
 </table>
+<p>{{speed_info}}</p>
+
+
