Added new column localization string (shadowrun6.label.column.nameAnimate) for animate objects like Contacts and SINs to accomodate languages that differentiate. (#17)

--- a/templates/parts/section-contacts.html
+++ b/templates/parts/section-contacts.html
@@ -8,7 +8,7 @@
 <table>
 	<thead>
 		<tr>
-		  <th style="text-align:left">{{ localize 'shadowrun6.label.column.name' }}</th>
+		  <th style="text-align:left">{{ localize 'shadowrun6.label.column.nameAnimate' }}</th>
 		  <th>{{ localize 'shadowrun6.contact.type' }}</th>
 		  <th>{{ localize 'shadowrun6.contact.rating_short' }}</th>
 		  <th>{{ localize 'shadowrun6.contact.loyalty_short' }}</th>
