--- a/templates/parts/section-sins.html
+++ b/templates/parts/section-sins.html
@@ -8,7 +8,7 @@
 <table>
 	<thead>
 		<tr>
-		  <th style="text-align:left; width: 14em">{{ localize 'shadowrun6.label.column.name' }}</th>
+		  <th style="text-align:left; width: 14em">{{ localize 'shadowrun6.label.column.nameAnimate' }}</th>
 		  <th style="width: 10em">{{ localize 'shadowrun6.sin.quality' }}</th>
 		  <th style="width: 2em" colspan="2">{{ localize 'shadowrun6.label.column.action' }}</th>
 		</tr>
