Improve Player Character sheet so it doesn't look messed up when decreasing the width of the sheet window (#21)

--- a/templates/parts/pc-derived.html
+++ b/templates/parts/pc-derived.html
@@ -1,4 +1,4 @@
-	<div class="section" style="display: inline-block; width:100%">
+	<div class="section" style="display: inline-block; width:100%; min-width: 350px;">
 		<h2 class="section-title">{{ localize 'shadowrun6.section.derived' }}</h2>
 		<table>
 			<tr>
