--- a/templates/parts/section-autosoft.html
+++ b/templates/parts/section-autosoft.html
@@ -1,7 +1,7 @@
-<div class="section" style="display: inline-block; width: 100%;">
+<div class="section" style="display: inline-block; width: 100%; min-width: 500px;">
 	<!-- Header -->
 	<div class="section-head">
-		<h2 class="section-title">{{ localize 'shadowrun6.section.software.title' }}</h2>
+		<h2 class="section-title">{{ localize 'shadowrun6.gear.subtype.AUTOSOFT' }}</h2>
 		<a class="item-control autosoft-create" title="{{localize 'shadowrun6.section.software.add' }}">
 			<h2 class="fas fa-plus"></h2>
 		</a>
