--- a/templates/parts/section-bodyware.html
+++ b/templates/parts/section-bodyware.html
@@ -1,4 +1,4 @@
-<div class="section" style="display: inline-block; width:100%">
+<div class="section" style="display: inline-block; width:100%; min-width: 350px;">
  <div class="section-head">
 	<h2 class="section-title">{{ localize 'shadowrun6.section.bodyware.title' }}</h2>
 	<a class="item-control bodyware-create" title="{{localize 'shadowrun6.section.bodyware.add' }}">
