--- a/templates/parts/section-gear.html
+++ b/templates/parts/section-gear.html
@@ -1,4 +1,4 @@
-<div class="section" style="display: inline-block; width: 48%; margin: 5px;">
+<div class="section" style="display: inline-block; width: 48%; margin: 5px; min-width: 320px;">
  <div class="section-head">
 	<h2 class="section-title">{{title}}</h2>
 		<a class="item-control {{geartype}}-create" title="{{localize 'shadowrun6.section.gear.add' }}"><h2 class="fas fa-plus"></h2></a>
