--- a/templates/parts/section-matrixactions.html
+++ b/templates/parts/section-matrixactions.html
@@ -1,4 +1,4 @@
-<div class="section" style="display: inline-block; width:60%">
+<div class="section" style="display: inline-block; width:60%; min-width: 383px;">
 	<div class="section-head">
 		<h2 class="section-title">{{ localize 'shadowrun6.section.matrix_actions.title' }}</h2>
 	</div>
