--- a/templates/parts/section-skills-knowledge.html
+++ b/templates/parts/section-skills-knowledge.html
@@ -1,5 +1,5 @@
 	<!-- Knowledge skills -->
-   <div class="section" style="width: 100%;">
+   <div class="section" style="min-width: 350px; width: 40%;">
    <div class="section-head">
    <h2 class="section-title">{{ localize 'shadowrun6.section.skills.knowledge' }}</h2>
    <a class="item-control skill-knowledge-create" title="{{localize 'shadowrun6.section.skills.knowledge_add' }}"><h2 class="fas fa-plus"></h2></a>
