--- a/templates/parts/section-vehicles.html
+++ b/templates/parts/section-vehicles.html
@@ -1,4 +1,4 @@
-<div class="section" style="width:58%">
+<div class="section" style="width:58%; min-width: 500px;">
 	<div class="section-head">
      <h2 class="section-title">{{ localize 'shadowrun6.section.vehicles.title' }}</h2>
 	 <a class="item-control vehicle-create" title="{{localize 'shadowrun6.section.vehicles.add' }}"><h2 class="fas fa-plus"></h2></a>
