--- a/templates/parts/tab-magic.html
+++ b/templates/parts/tab-magic.html
@@ -1,5 +1,5 @@
   <section>
-	  <div style="column-count: 2; margin-right: 5px;">
+	  <div style="column-count: 2; margin-right: 5px; display: inline-block;">
 			{{> "systems/shadowrun6-eden/templates/parts/section-magicbase.html" showMagic=true}}
 			{{#if system.morDef.useSpells}}
 			  {{> "systems/shadowrun6-eden/templates/parts/section-spells.html"}}
