--- a/templates/actor/shadowrun6-Player-sheet.html
+++ b/templates/actor/shadowrun6-Player-sheet.html
@@ -51,7 +51,7 @@
 			<div class="attributes" style="margin-bottom: 10px">
 				{{> "systems/shadowrun6-eden/templates/parts/attributes-augmented.html" attributes=system.attributes}}
 			</div>
-		  <div style="column-count: 2; margin-right: 5px;">
+		  <div style="column-count: 2; margin-right: 5px; display: inline-block;">
 			{{> "systems/shadowrun6-eden/templates/parts/pc-derived.html" attributes=system.attributes}}
 		   {{> "systems/shadowrun6-eden/templates/parts/section-qualities.html"}}
 			{{> "systems/shadowrun6-eden/templates/parts/initiatives.html" initiative=system.initiative}}
