--- a/templates/parts/section-drones.html
+++ b/templates/parts/section-drones.html
@@ -1,4 +1,4 @@
-<div class="section" style="width:58%" >
+<div class="section" style="width:58%; min-width: 500px;" >
 	<div class="section-head">
      <h2 class="section-title">{{ localize 'shadowrun6.section.drones.title' }}</h2>
 	 <a class="item-control drone-create" title="{{localize 'shadowrun6.section.drones.add' }}"><h2 class="fas fa-plus"></h2></a>
