--- a/templates/parts/section-focus.html
+++ b/templates/parts/section-focus.html
@@ -1,4 +1,4 @@
-<div class="section" style="display: inline-block; width:100%">
+<div class="section" style="display: inline-block; width:100%; min-width: 380px;">
 	<div class="section-head">
 		<h2 class="section-title">{{ localize 'shadowrun6.section.focus.title' }}</h2>
 		<a class="item-control focus-create" title="{{localize 'shadowrun6.section.focus.add' }}">
