--- a/templates/parts/section-spells.html
+++ b/templates/parts/section-spells.html
@@ -1,4 +1,4 @@
-<div class="section" style="display: inline-block; width:100%">
+<div class="section" style="display: inline-block; width:100%; min-width: 394px;">
  <div class="section-head">
 	<h2 class="section-title">{{ localize 'shadowrun6.section.spells.title' }}</h2>
 	<a class="item-control spell-create" title="{{localize 'shadowrun6.section.spells.add' }}">
