Fixed missing localizations that were hardcoded (#20)

--- a/templates/actor/shadowrun6-NPC-sheet.html
+++ b/templates/actor/shadowrun6-NPC-sheet.html
@@ -1,6 +1,6 @@
 <form class="{{cssClass}}" autocomplete="off">
   <div class="npc-firstline">
-    <span>Editable <label class="switch">
+    <span>{{localize 'shadowrun6.actor.editable'}} <label class="switch">
        	<input type="checkbox" data-item-id="{{this.id}}" data-check="system.editmode" {{checked this.system.editmode}} type="checkbox" data-dtype="Boolean"/>
          <span class="shadowrun6-slider round"></span>
          </label>
