--- a/templates/parts/npc_usage_spirit.html
+++ b/templates/parts/npc_usage_spirit.html
@@ -1,5 +1,5 @@
 
-<label for="spirit_type">Type</label>
+<label for="spirit_type">{{localize 'shadowrun6.item.type'}}</label>
 <span>
     {{localize (lookup config.SPIRIT_TYPES system.spiritType)}}
 </span>
