--- a/templates/parts/section-riggingbase.html
+++ b/templates/parts/section-riggingbase.html
@@ -6,7 +6,7 @@
 	<table>
 		<tbody>
 			<tr>
-				<td>Control Rig</td>
+				<td>{{localize 'shadowrun6.item.vehicle.rigRating.long'}}</td>
 				<td>
 					<select name="system.controlRig" data-field="system.controlRig">
                      {{selectOptions config.CONTROL_RIG_RATING selected=system.controlRig localize=true}}
