--- a/templates/parts/section-karma_rep.html
+++ b/templates/parts/section-karma_rep.html
@@ -7,7 +7,7 @@
 	    <tr>
 	      <th style="width: 6em">{{ localize 'shadowrun6.section.karma.karma' }}<th>
 	      <td><input class="box" style="width: 4em" type="text" data-dtype="Number" data-field="system.karma" value="{{system.karma}}"/></td>
-	      <td>Total: <input class="box"  style="width: 4em"type="text" data-dtype="Number" data-field="system.karma_total" value="{{system.karma_total}}"/></td>
+	      <td>{{ localize 'shadowrun6.section.karma.total' }}: <input class="box"  style="width: 4em"type="text" data-dtype="Number" data-field="system.karma_total" value="{{system.karma_total}}"/></td>
 	    </tr>
 	    <tr>
 	      <th style="width: 6em">{{ localize 'shadowrun6.section.karma.heat' }}<th>
